# dispatch

./: .gitignore  LICENSE  README.md  pyproject.toml
.env/: .env.example
app/: __init__.py
docs/: architecture-decisions.md  autopilot-runbook-dispatch.md  autopilot-runbook.md  brief.md  cross-device-verification.md  e2e-testing-scenarios.md  implementation-context-phase-1.md  implementation-context-phase-2.md  implementation-context-phase-3.md  implementation-context-phase-4.md  implementation-context-phase-5.md  implementation-context-phase-6.md  implementation-context-phase-7.md  implementation-context-phase-8.md  implementation-plan-merge-action-and-ui-modernisation.md  implementation-plan-mobile-remote-access.md  phase-1-component-breakdown.md  phase-2-component-breakdown.md  phase-3-component-breakdown.md  phase-4-component-breakdown.md  phase-5-component-breakdown.md  phase-6-component-breakdown.md  phase-7-component-breakdown.md  phase-8-component-breakdown.md  phase-progress.json  phase-summary.md  phase_plan.md  requirements.md  sample-payload.json  solution-design.md
scripts/: evals.py
tests/: __init__.py  conftest.py  test_action_generator.py  test_action_type_defaults.py  test_app_startup.py  test_app_state.py  test_config_manager.py  test_conftest.py  test_error_handling.py  test_evals.py  test_executor.py  test_executor_config.py  test_github_client.py  test_initial_screen.py  test_link_project.py  test_llm_integration.py  test_llm_payload_generator.py  test_llm_service.py  test_load_project.py  test_main.py  test_main_screen.py  test_models.py  (+9 more)
(+116 files in other folders)
