[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dispatch"
version = "0.1.0"
description = "Local-first desktop application for AI agent dispatch orchestration"
requires-python = ">=3.13"
dependencies = [
  "nicegui>=2.0",
  "httpx>=0.27",
  "pydantic>=2.0",
  "python-dotenv>=1.0",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
  "black>=24.0",
  "isort>=5.13",
  "pytest>=8.0",
  "pytest-cov>=5.0",
]
llm = [
  "openai>=1.0",
]

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "requires_autopilot: marks tests that require confirmed live Autopilot access",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
